# VG101_project_MaskDistributionSimulator

./: CMakeLists.txt  README.md  functions.cpp  global_values.cpp  input_functions.cpp  main.cpp  map.cpp  mask_simu.h  mask_simulation.h  openGL_basic_functions.cpp  openGL_structure_functions.cpp  sir_functions.cpp  time_initialization.cpp
resources/data_process/: location.fig  mark.docx  plot_grid.m  radius.fig
